# sshpilot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BULK_OPERATIONS_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DEV_README.md  FINAL_SUCCESS_REPORT.md  GITHUB_ACTIONS.md  HOW_TO_TEST.md  IDENTITY_PROVIDERS.md  IMPLEMENTATION_SUMMARY.md  IMPORT_EXPORT_IMPLEMENTATION.md  INSTALL-macos.md  MANIFEST.in  Makefile  PLUGIN_SDK.md  PORT_INTEGRATION.md  PYINSTALLER-GUIDE.md  README.md  README_MACOS_BUILD.md  REFACTORING_PLAN.md  TESTING.md  TESTING_SUCCESS.md  build-deb.sh  build-pyinstaller.sh  build_complete.py  build_dmg.sh  build_gresource.sh  build_macos.py  build_universal.py  create_dmg.sh  create_styled_dmg.py  debug_gresource.py  debug_runtime_hook.py  debug_ssh_manager.py  demo.py  (+70 more)
.github/: FUNDING.yml  build-mac-2  build-mac-2.yml  macos-pyinstaller-x86.yml
.history/: MANIFEST_20250808192314.in  README_20250730165836.md  build-deb_20250808192747.sh  build-deb_20250808193819.sh  io.github.mfat.sshpilot_20250808190924.desktop  io.github.mfat.sshpilot_20250808191211.desktop  io.github.mfat.sshpilot_20250808191414.desktop  io.github.mfat.sshpilot_20250808191518.desktop  io.github.mfat.sshpilot_20250808191742.desktop  io.github.mfat.sshpilot_20250808192212.desktop  requirements_20250808191927.txt  sshpilot_20250730223229.py
data/: io.github.mfat.sshpilot.appdata.xml  io.github.mfat.sshpilot.desktop  io.github.mfat.sshpilot.gschema.xml  io.github.mfat.sshpilot.json  io.github.mfat.sshpilot.metainfo.xml.in  meson.build  sshpilot-agent.1  sshpilot.1  sshpilot.in
debian/: changelog  control  copyright  debhelper-build-stamp  files  install  postinst  prerm  rules  sshpilot-agent.1  sshpilot.desktop  sshpilot.manpages  watch
docs/: CREDENTIAL_MANAGER.md  IDENTITY_PROVIDERS.md  PLUGIN_SDK.md  README.md  SSH-config-parsing.md  agent-architecture.md  architecture.md  command-converter.md  developer_guide.md  diagnostics.md  host-hostname-divergence.md  index.html  (+7 more)
src/: build_config.py.in  index.html  meson.build  sshpilot.in
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  connection.rs  key_manager.rs  main.rs  port_utils.rs  ssh.rs  terminal.rs
src/js/: app.js
src/js/modules/: connection-manager.js  event-emitter.js  key-manager.js  notification-manager.js  terminal-manager.js  theme-manager.js  ui-manager.js
src/sshPilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sshpilot/: __init__.py  actions.py  askpass_utils.py  authorized_keys_window.py  autocomplete.py  backup_manager.py  bitwarden_backup_setup.py  bitwarden_setup.py  cli_connect.py  command_blocks.py  command_converter.py  command_palette.py  command_progress_dialog.py  config.py  connection_dialog.py  connection_dialog_field_helpers.py  connection_dialog_port_forwarding.py  connection_dialog_validation.py  connection_manager.py  credential_model.py  dnd_payload.py  effective_config_check.py  effective_config_dialog.py  effective_config_diff.py  file_manager_integration.py  file_manager_window.py  file_type_icons.py  groups.py  host_picker.py  i18n.py  identity.py  key_utils.py  known_hosts_editor.py  log_viewer.py  main.py  monospace_font_dialog.py  new_connection.py  omni_search.py  platform_utils.py  preferences.py  (+41 more)
src/sshpilot/file_manager/: format_utils.py  icon_levels.py  pane.py  pane_controls.py  progress_dialog.py  properties_dialog.py
src/sshpilot/locale/de/LC_MESSAGES/: sshpilot.mo
src/sshpilot/plugins/: INTEGRATION.md  __init__.py  api.py  host.py  registry.py  registry_client.py
src/sshpilot/plugins/builtin/docker_manager/: dialogs.py  page.py  tab_compose.py  tab_containers.py  tab_images.py  tab_listings.py  tab_logs.py  tab_stats.py
src/sshpilot/plugins/builtin/docker_protocol/: __init__.py
src/sshpilot/plugins/builtin/kubernetes_protocol/: __init__.py
src/sshpilot/plugins/builtin/mosh_protocol/: __init__.py  plugin.json
src/sshpilot/plugins/builtin/serial_protocol/: __init__.py
src/sshpilot/plugins/builtin/ssh_protocol/: plugin.json
src/sshpilot/plugins/builtin/telnet_protocol/: __init__.py
src/sshpilot/plugins/examples/easyenv_workspaces/: README.md  __init__.py  plugin.json
src/sshpilot/plugins/examples/mock_vps/: plugin.json
src/sshpilot/providers/: file_key.py  socket_agent.py  system_agent.py
src/sshpilot/resources/: sshpilot.gresource  sshpilot.gresource.xml  style.css  tips.de.md  tips.md
src/sshpilot/resources/icons/scalable/mimetypes/: ATTRIBUTION
src/sshpilot/resources/language-specs/: sshconfig.lang
src/sshpilot/resources/ui/: add_folder_dialog.blp  add_folder_dialog.ui  authorized_key_entry_dialog.blp  authorized_keys_window.blp  authorized_keys_window.ui  command_edit_dialog.blp  command_edit_dialog.ui  connection_dialog.blp  file_manager_window.blp  file_manager_window.ui  known_hosts_editor.blp  known_hosts_editor.ui  log_viewer_window.blp  monospace_font_dialog.blp  monospace_font_dialog.ui  mount_progress_dialog.blp  mount_progress_dialog.ui  placeholder_dialog.blp  placeholder_dialog.ui  preferences_window.blp  preferences_window.ui  properties_dialog.blp  properties_dialog.ui  scp_download_window.blp  scp_download_window.ui  scp_transfer_dialog.blp  scp_transfer_dialog.ui  sftp_connection_dialog.blp  sftp_connection_dialog.ui  shortcut_capture_dialog.blp  shortcut_editor_window.blp  shortcut_editor_window.ui  sshcopyid_window.blp  sshcopyid_window.ui  text_editor_window.ui  window.blp  window.ui
src/sshpilot_dnd/: __init__.py  logic.py
src/sshpilot_pkg/github/mfat/sshpilot/: __init__.py  config.py  connection_dialog.py  connection_manager.py  main.py  terminal.py  window.py  window.py.backup
src/sshpilot_pkg/github/mfat/sshpilot/resources/: sshpilot.gresource  sshpilot.gresource.xml
src/sshpilot_qt/: __init__.py  app.py  async_utils.py  connection_editor.py  connections_view.py  main_window.py  preferences.py  resources.py  signals.py  terminal_pane.py  ui.py
src/styles/: components.css  main.css  terminal.css  themes.css
(+671 files in other folders)
