[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sshpilot"
version = "3.8.5"
authors = [
  { name="mFat", email="newmfat@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
description = "SSH connection manager and terminal"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyGObject>=3.42",
    "pycairo>=1.20.0",
    "paramiko>=3.4",
    "cryptography>=42.0",
    "keyring>=24.3",
    "psutil>=5.9.0",
    "certifi>=2023.7.22",
]
# Note: This package also requires system dependencies that must be installed separately:
# - GTK4, libadwaita, VTE (for terminal backend)
# - WebKit 6.0 (for PyXterm.js backend, optional but recommended on Linux only)
#   Note: webkitgtk is Linux-only; PyXterm.js backend not available on macOS
# - GtkSourceView 5.0, libsecret
# See README.md or AGENTS.md for complete system dependency list.

[tool.setuptools.packages.find]
where = [""]
include = ["sshpilot*"]
# Example plugins are developer references only — never shipped. Users get them
# from the plugin registry instead.
exclude = ["packaging*", "screenshots*", "sshpilot.plugins.examples*"]

[tool.setuptools.package-data]
# Bundled runtime resources (sshpilot.gresource, icons, language-specs, …).
# Must be declared explicitly: `resources` is not a Python package, so setuptools
# does not pick it up automatically. Without this the wheel ships no gresource
# and the app fails at startup with "can't load gresource".
"sshpilot" = ["resources/**/*", "resources/*"]
# Built-in plugin manifests are read from disk by the plugin loader.
# setuptools does not glob package names here: add a key per built-in plugin.
"sshpilot.plugins.builtin.ssh_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.telnet_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.serial_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.docker_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.kubernetes_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.mosh_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.docker_manager" = ["plugin.json"]

[project.urls]
Homepage = "https://github.com/mfat/sshpilot"
Issues = "https://github.com/mfat/sshpilot/issues"

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = [
    "src",
    "sshpilot/vendor",
    "tests/manual",
    "tests_e2e",
    "build",
    "dist",
    "packaging",
]

[tool.ruff.lint]
# Conservative initial rule set: syntax errors, misused comparisons, and the
# pyflakes checks that almost always flag runtime bugs. Broader rules can be
# enabled incrementally as the tree is cleaned up.
select = ["E9", "F63", "F7"]
