[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sshpilot"
# Single source of truth: sshpilot/__init__.py::__version__ (updated by the
# release bump). setuptools reads it via AST (no package import at build time),
# so the wheel version can never drift from the app version again.
dynamic = ["version"]
authors = [
  { name="mFat", email="newmfat@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
description = "SSH connection manager and terminal"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyGObject>=3.42",
    "pycairo>=1.20.0",
    "cryptography>=42.0",
    "keyring>=24.3",
    "psutil>=5.9.0",
    "certifi>=2023.7.22",
]

[project.optional-dependencies]
# Test-only: test_combined_auth.py uses paramiko as a mock SSH server to
# validate the native auth path. paramiko is NOT a runtime dependency — the
# file manager uses the native OpenSSH `ssh -s sftp` subprocess.
test = [
    "pytest>=7.0",
    "paramiko>=3.4",
]
# Note: This package also requires system dependencies that must be installed separately:
# - GTK4, libadwaita, VTE (for terminal backend)
# - WebKit 6.0 (for PyXterm.js backend, optional but recommended on Linux only)
#   Note: webkitgtk is Linux-only; PyXterm.js backend not available on macOS
# - GtkSourceView 5.0, libsecret
# See README.md or AGENTS.md for complete system dependency list.

[tool.setuptools.dynamic]
version = {attr = "sshpilot.__version__"}

[tool.ty.rules]
# PyGObject is dynamic and ships no type stubs, so the type checker can't see
# gi.repository members or attributes assigned in __init__/via GObject. These
# two categories are pure noise here (700+ false positives) and would drown the
# real findings — silence them so the typecheck gate surfaces genuine issues.
# The gate runs non-blocking in CI (.github/workflows/typecheck.yml); tighten
# module-by-module as real findings are cleared.
unresolved-import = "ignore"
unresolved-attribute = "ignore"

[tool.setuptools.packages.find]
where = [""]
include = ["sshpilot*"]
# Example plugins are developer references only — never shipped. Users get them
# from the plugin registry instead.
exclude = ["packaging*", "screenshots*", "sshpilot.plugins.examples*"]

[tool.setuptools.package-data]
# Bundled runtime resources (sshpilot.gresource, icons, language-specs, …).
# Must be declared explicitly: `resources` is not a Python package, so setuptools
# does not pick it up automatically. Without this the wheel ships no gresource
# and the app fails at startup with "can't load gresource".
"sshpilot" = ["resources/**/*", "resources/*"]
# Built-in plugin manifests are read from disk by the plugin loader.
# setuptools does not glob package names here: add a key per built-in plugin.
"sshpilot.plugins.builtin.ssh_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.telnet_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.serial_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.docker_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.kubernetes_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.mosh_protocol" = ["plugin.json"]
"sshpilot.plugins.builtin.docker_manager" = ["plugin.json"]

[project.urls]
Homepage = "https://github.com/mfat/sshpilot"
Issues = "https://github.com/mfat/sshpilot/issues"

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = [
    "src",
    "sshpilot/vendor",
    "tests/manual",
    "tests_e2e",
    "build",
    "dist",
    "packaging",
]

[tool.ruff.lint]
# Conservative, growing rule set: syntax errors, misused comparisons, and the
# pyflakes checks that almost always flag runtime bugs. Broader rules are
# enabled incrementally as the tree is cleaned up.
#   F601 — duplicate dict key literal (one value silently lost)
#   F7   — misc pyflakes bug checks (e.g. break/return outside loop/function)
#   F811 — redefinition of an unused name (dead, shadowed defs)
#   F821 — undefined name (real NameError at runtime)
select = ["E9", "F63", "F7", "F601", "F811", "F821"]
