# Desktop entry, AppStream metainfo and the application icon.
# Phase 6 converts the .desktop / .metainfo into translatable *.in templates
# merged with i18n.merge_file and adds desktop-file/appstream validation.

install_data('io.github.mfat.sshpilot.desktop',
  install_dir: datadir / 'applications',
)

install_data('io.github.mfat.sshpilot.metainfo.xml',
  install_dir: datadir / 'metainfo',
)

install_data('icons/hicolor/scalable/apps/io.github.mfat.sshpilot.svg',
  install_dir: datadir / 'icons' / 'hicolor' / 'scalable' / 'apps',
)
