[package]
name = "sshpilot-tauri"
version = "0.1.0"
description = "A modern SSH client built with Tauri"
authors = ["SSHPilot Team"]
license = "MIT"
repository = "https://github.com/yourusername/sshpilot-tauri"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "dialog-save", "fs-remove-dir", "fs-rename-file", "fs-exists", "fs-create-dir", "fs-read-dir", "fs-remove-file", "fs-read-file", "fs-copy-file", "dialog-open", "shell-execute", "shell-sidecar", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
